--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         push: true
         context:  source/ui
-        tags: adaptpaas.azurecr.io/adapt/ui:${{ github.sha }}
+        tags: ${{ secrets.ACR_ENDPOINT }}/ui:${{ github.sha }}
         labels: ${{ steps.meta.outputs.labels }}
 
     - name: Build & Push count service
@@ -45,7 +45,7 @@ jobs:
       with:
         push: true
         context:  source/count-service
-        tags: adaptpaas.azurecr.io/adapt/count-service:${{ github.sha }}
+        tags: ${{ secrets.ACR_ENDPOINT }}/count-service:${{ github.sha }}
         labels: ${{ steps.meta.outputs.labels }}
   
     - name: Build & Push thing service
@@ -53,7 +53,7 @@ jobs:
       with:
         push: true
         context:  source/thing-service
-        tags: adaptpaas.azurecr.io/thing-service:${{ github.sha }}
+        tags: ${{ secrets.ACR_ENDPOINT }}/thing-service:${{ github.sha }}
         labels: ${{ steps.meta.outputs.labels }}
 
   # build-subscriptions-server:
