--- a/source/ui/bff-service/bff-service.csproj
+++ b/source/ui/bff-service/bff-service.csproj
@@ -7,4 +7,7 @@
     <RootNamespace>bff_service</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="1.0.1" />
+  </ItemGroup>
 </Project>
